Mon Nov  3 04:43:43 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * Makefile:
          Pass the $(MAKE) variable to the reverseclean script
          instead of "make".  This fixes problems in autobuilds that
          assign something other than "make" to the make_program
          variable.

Mon Nov  3 03:04:48 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Endpoint.cpp:
        * tao/IIOP_Acceptor.cpp:
        * tao/IIOP_Connection_Handler.cpp:
        * tao/IIOP_Endpoint.cpp:
        * tao/Strategies/DIOP_Acceptor.cpp:
        * tao/Strategies/DIOP_Endpoint.cpp:
        * tao/Strategies/DIOP_Profile.cpp:
        * tao/Strategies/SHMIOP_Acceptor.cpp:
        * tao/Strategies/SHMIOP_Connection_Handler.cpp:
        * tao/Strategies/SHMIOP_Endpoint.cpp:
        * tao/Strategies/SHMIOP_Profile.cpp:
          Added #includes needed due to recent subsetting.

Sun Nov  2 23:28:26 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * docs/tutorials/Quoter/Event_Service/server.cpp:
        * docs/tutorials/Quoter/RT_Event_Service/server.cpp:
        * examples/POA/DSI/client.cpp:
        * examples/POA/Default_Servant/File_i.cpp:
        * examples/POA/Generic_Servant/test_i.cpp:
        * examples/Persistent_Grid/Simple_util.cpp:
        * examples/Simple/Simple_util.cpp:
        * examples/Simple/bank/Bank_Client_i.cpp:
        * examples/Simple/echo/Echo_Client_i.cpp:
        * examples/Simple/grid/Grid_Client_i.cpp:
        * orbsvcs/Time_Service/Clerk_i.cpp:
        * orbsvcs/Time_Service/Server_i.cpp::
        * orbsvcs/examples/CosEC/Simple/Supplier.cpp:
        * orbsvcs/examples/Notify/Lanes/Consumer_Client.cpp:
        * orbsvcs/examples/Notify/Lanes/Supplier_Client.cpp:
        * orbsvcs/examples/Notify/ThreadPool/Consumer_Client.cpp:
        * orbsvcs/examples/Notify/ThreadPool/Supplier_Client.cpp:
        * orbsvcs/orbsvcs/CosEvent/CEC_Dispatching_Task.cpp: